# despro-web

./: .gitignore  despro_web.db  pyproject.toml
despro_web/: config.py  main.py
despro_web/models/: history.py
despro_web/routes/: api.py  camera.py  voice_command.py  web.py  websocket.py
despro_web/services/: camera_service.py  notification.py  oven_service.py
despro_web/static/css/: styles.css
despro_web/static/js/: script.js  websocket.js
despro_web/tasks/: countdown.py
despro_web/templates/: index.html
tests/: test_despro_web.py
