[tool.poetry]
name = "despro-web"
version = "0.1.0"
description = ""
authors = ["umar <umarmaulana31@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.5"
uvicorn = {extras = ["standard"], version = "^0.32.1"}
Jinja2 = "^3.1.4"

[tool.poetry.scripts]
start = "despro_web.main:main"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
